# helmet-detection-at-workplace

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  helmet_detection_at_workplace.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: .gitignore
.github/workflows/: main.yaml
app/: main.py
frontend/: Dockerfile
frontend/src/: App.css  App.jsx
models/: .gitignore  best_model_v1.pt.dvc  best_v4.pt.dvc  best_yolo12s.pt.dvc
src/: number_of_instances.py  prepare_data.py  split_data.py  train.py
