[project]
name = "yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.62.0",
    "dvc-gdrive>=3.0.1",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.6",
    "mlflow>=3.3.2",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.188",
]

